style.css
.waterfall-regular {
  font-family: "Waterfall", cursive;
  font-weight: 400;
  font-style: normal;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
}

body {
    background-image: url("img/fundochoc.png");
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
    min-height: 100vh;
    background-repeat: no-repeat;
    overflow: hidden;

}

nav {
    background-color: #441D03;
    height: 3.8rem;
    display: flex;
    align-items: center;
    justify-content: space-between; 
    padding: 0 2rem;
}

nav ul {
    display: flex;
    gap: 2rem;
    list-style: none;
    margin: 0 22%;
}

a {
    color: white;
    text-decoration: none;
    font-weight: 500;
}

li a:hover {
    transform: scale(1.2);
    background-color: #a84900;
    border-radius: 15px;
    padding: 0px 15px;
}

footer h4:hover {
    border-radius: 15px;
    margin: 0 -20px;
    
}

.menunav {
    font-family: "Just Me Again Down Here", cursive;
    font-weight: 400;
    font-size: 2rem;
}

.logo {
    height: 3.5rem;
    width: auto;
    margin-left: 22%;
    border-radius: 50%;
}

main {
    color: white;
    text-align: center;

    
}

footer {
    color: white;
    text-align: center;
    padding: 0.5% 0%;
    background-color: #321600;

}

.textos h1 {
    font-family: "Waterfall", cursive;
    font-weight: 550;
    font-style: normal;
    margin: 0;
    line-height: 0.8;
}

.textos h2, h3 {
    font-family: "Waterfall", cursive;
    font-weight: 400;
    font-style: normal;
    margin: 0;
    line-height: 0.8;
}

#secprincipal {
    padding-top: 20vh;
    padding-bottom: 20vh;
}

#secprincipal h1 {
    font-size: 18rem;
}

#secprincipal h2 {
    font-size: 10rem;
}

#receitassec {
    font-size: 8rem;
}

.secao {
    margin-top: 10%;
    margin-bottom: 5%;
}

.receitas {
    display: flex;
    flex-direction: column;
    gap: 3rem;
    align-items: center;
}

#secprincipal, #receitassec {
    scroll-margin-top: 180px;
}

.linha-receitas {
    display: flex;
    gap: 2rem;
}

.card {
    position: relative;
    width: 220px;
    height: 140px;
    border-radius: 20px;
    overflow: hidden;
    cursor: pointer;
    transition: 0.3s ease;
    border: 1px solid #6f3305;
}

.card img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.card span {
    position: absolute;
    bottom: 10px;
    left: 50%;
    transform: translate(-50%);
    background-color: #8B3E05;
    padding: 5px 15px;
    border-radius: 15px;
    font-family: "Waterfall", cursive;
    font-size: 1.3rem;
    color: white;
}

.card:hover {
    transform: scale(1.08);
}

.card:hover img {
    filter: brightness(0.8);
}



/* ------------------------------------------------- */

.pagina-receita {
    display: flex;
    justify-content: center;
    padding-top: 120px;
    padding-bottom: 80px;
    
}

.receita-container {
    width: 85%;
    max-width: 1200px;
    margin: 0 auto;
    background-color: #6b2400;
    border-radius: 35px;
    padding: 50px;
    box-shadow: 0 0 40px rgba(0,0,0,0.5);
    border: 1px solid #c67537;
}

.receita-topo {
    display: flex;
    gap: 50px;
    align-items: stretch;
}

.imagem-receita {
    flex: 1;
    background-color: #8B3E05;
    border-radius: 25px;
    overflow: hidden;
    display: flex;
    flex-direction: column;
}

.imagem-receita img {
    width: 100%;
    height: 260px;
    object-fit: cover;
    border: 1px solid #a26e47;
}

.imagem-receita h2 {
    font-family: "Waterfall", cursive;
    font-size: 5rem;
    padding: 30px;
    line-height: 1;
}
.ingredientes-box {
    flex: 1;
    background-color: #8B3E05;
    border-radius: 25px;
    padding: 30px;
    text-align: left;
    border: 1px solid #c15400;
}

.ingredientes-box h3 {
    font-family: "Waterfall", cursive;
    font-size: 3rem;
    margin-bottom: 25px;
}

.ingredientes-box h4 {
    font-size: 1.4rem;
    margin-bottom: 15px;
}

.ingredientes-box ul {
    list-style: disc;
    padding-left: 25px;
    line-height: 1.8;
    font-size: 1.3rem;
}

.modo-preparo {
    margin-top: 50px;
}

.modo-preparo h3 {
    font-family: "Waterfall", cursive;
    font-size: 5rem;
    margin-bottom: 20px;
    text-align: left;
}

.modo-preparo ol {
    padding-left: 25px;
    line-height: 1.8;
    font-size: 1.5rem;
    text-align: left;
}

.pagina-receita {
    display: block;
    font-size: 1rem; 
    padding-top: 120px;
    padding-bottom: 80px;
}

/* ---------------- CONTATO ---------------- */

.pagina-contato {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 140px;
    padding-bottom: 80px;
}

.contato-container {
    width: 90%;
    max-width: 700px;
    background-color: #6b2400;
    border-radius: 35px;
    padding: 50px;
    box-shadow: 0 0 40px rgba(0,0,0,0.6);
    border: 1px solid #c67537;
}

.contato-container h1 {
    font-family: "Waterfall", cursive;
    font-size: 4rem;
    text-align: center;
    margin-bottom: 40px;
    background-color: #8B3E05;
    display: inline-block;
    padding: 10px 30px;
    border-radius: 20px;
}

form {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

form label {
    font-family: "Waterfall", cursive;
    font-size: 1.5rem;
    text-align: left;
}

form input,
form textarea {
    background-color: #8B3E05;
    border: 1px solid #c15400;
    border-radius: 15px;
    padding: 10px;
    font-size: 1rem;
    color: white;
    outline: none;
}

form input::placeholder,
form textarea::placeholder {
    color: #f3d7c2;
}

form button {
    margin-top: 25px;
    align-self: center;
    background-color: #8B3E05;
    border: 1px solid #c15400;
    padding: 10px 40px;
    border-radius: 25px;
    font-family: "Waterfall", cursive;
    font-size: 2rem;
    color: white;
    cursor: pointer;
    transition: 0.3s ease;
}

form button:hover {
    background-color: #a34708;
    transform: scale(1.05);
}

